--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Usuário </title>
+    <title>Cadastro de Usuário de ONG </title>
 </head>
 <body>
     <header>
-        <h1>Usuário</h1>
+        <h1>Usuário da ONG</h1>
         <nav>
             <ul>
               <li><a href="index.html">Inicio</a></li>
@@ -15,10 +15,30 @@
               <li><a href="cadastro.html">Cadastro</a></li>
             </ul>
         </nav>
-        
-
     </header>
+    <main>
+        <section><h2>Quem Somos</h2>
+        <p>Somos uma organização sem fim lucrativos com animais abandonados.</p>
+            <img src="imsgens/cachorro.jpg" alt="Voluntários em ação">
+            </section>
+            <section>
+                <h2>Missão da ONG Cuidadora</h2>
+                <p>Promover dignidade e oportundade de acolhimento aos animais abandonados.</p>
+            </section>
+        <section><h2>
+            Contato com a ONG Cuidadora
+        </h2>
+    <address>
+        <p>
+            Endereço : Rua das Flores, 123 - Bairro Jardim, Cidade São Paulo- Estado São Paulo-, CEP: 12345-678
+         </p>
+         <p>Telefone: (11)99999-9999 </p>
+         <p>Email: contato@organizaçãocuidadora.com.br</p>
+    </address></section>
+        </main>
 
-    
+    <footer>
+        <p>&copy; 2025 ONG Cuidadora</p>
+    </footer>
 </body>
 </html>
